--- a/scape-child/sass/_main-section.scss
+++ b/scape-child/sass/_main-section.scss
@@ -1219,3 +1219,9 @@ a.wtbx-totop.circle-shadow {
         margin-top: 0 !important;
     }
 }
+
+.single {
+    div#main {
+        padding-top: 40px;
+    }
+}
