--- a/scape-child/sass/_typography.scss
+++ b/scape-child/sass/_typography.scss
@@ -1,7 +1,6 @@
 // $font-primay: 'Open Sans';
 $font-primary:'Open Sans',
 sans-serif !important;
-$font-secondary: "Roboto Condensed",
-sans-serif;
+$font-secondary: 'Rajdhani';
 $font-third:'Open Sans',
 sans-serif;
