--- a/scape-child/sass/_colors.scss
+++ b/scape-child/sass/_colors.scss
@@ -1,11 +1,12 @@
 $color-gray:#44414f;
-$color-gray2:#C2C2C2;
+$color-gray2:#c5c5c5;
 $color-gray3:#D1D1D1;
 $color-white:#fff;
 $color-black:#000;
 $color-green:#90ee90;
 $color-yellow:#ffff00;
 $color-blue:#013068;
+$color-red:#cc0000;
 $color-lightblue:#e9efff;
 // basic colors
 $color-lightgray:#EFEFEF;
