--- a/scape-child/sass/_main-section.scss
+++ b/scape-child/sass/_main-section.scss
@@ -203,6 +203,9 @@ div#main {
                         font-size: 13px;
                         margin-right: 15px;
                         font-family: $font-primary;
+                        &:hover {
+                            color: $color-red;
+                        }
                     }
                 }
             }
@@ -447,6 +450,9 @@ div#main {
                     font-family: $font-primary;
                     text-transform: uppercase;
                     font-size: 12px;
+                    &:hover {
+                        color: $color-red;
+                    }
                     &:after {
                         width: 0;
                         height: 0;
