--- a/scape-child/sass/_mobile-option.scss
+++ b/scape-child/sass/_mobile-option.scss
@@ -2,7 +2,7 @@
     position: fixed;
     bottom: 0;
     left: 0;
-    background: $color-white;
+    background: $color-red;
     display: none;
     @include shadows;
     @media only screen and (max-width: 1000px) {
@@ -62,7 +62,7 @@
         line-height: 40px !important;
         i {
             font-size: 1.6em;
-            color: $color-secondary;
+            color: $color-white !important;
         }
     }
 }
